完整的手架版本
